--- a/roles/general/tasks/main.yaml
+++ b/roles/general/tasks/main.yaml
@@ -1,5 +1,8 @@
 ---
-
+- name: update os
+  shell:
+    cmd: apt update -y
+    
 - name: Install base needed apt-packages
     apt:
       name: "{{ apt_http_packages }}"
