--- a/roles/nginx/handlers/main.yml
+++ b/roles/nginx/handlers/main.yml
@@ -1,6 +1,6 @@
 ---
-- name: restart nginx
-  service: name=nginx state=restarted enabled=yes
+- name: nginx start
+  service: name=nginx state=started
 
-- name: reload nginx
-  service: name=nginx state=reloaded
+- name: nginx restart
+  service: name=nginx state=restarted
