--- a/roles/nginx/tasks/main.yml
+++ b/roles/nginx/tasks/main.yml
@@ -9,8 +9,8 @@
   when: nginxinstalled is success
   template: src=default.j2 dest=/etc/nginx/sites-available/default owner=www-data group=www-data
 
-- name: Create Root Directory for Nginx
-  when: nginxinstalled is success
-  file: path={{ root }}  mode=775 state=directory owner=www-data group=www-data
-  notify:
-  - nginx restart    
+# - name: Create Root Directory for Nginx
+#   when: nginxinstalled is success
+#   file: path={{ root }}  mode=775 state=directory owner=www-data group=www-data
+#   notify:
+#   - nginx restart    
