--- a/roles/postgresql/tasks/main.yml
+++ b/roles/postgresql/tasks/main.yml
@@ -1,28 +1,43 @@
 ---
+- name: Ensure locale is available
+  locale_gen: name=en_US.UTF-8
+
 - name: Install PostgreSQL
-    apt:
-      pkg:
-        - postgresql
-        - postgresql-contrib
-        - postgresql-server-dev-all
-        - python3-psycopg2
-        - python-psycopg2
-      state: latest
+  apt:
+    pkg:
+      - postgresql
+      - postgresql-contrib
+      - postgresql-server-dev-all
+      - python3-psycopg2
+      - python-psycopg2
+    state: latest
 
-  - name: Start and enable postgres
-    service: name=postgresql enabled=yes state=started
+- name: Start and enable postgres
+  service: name=postgresql enabled=yes state=started
 
-  - name: Create database
-    postgresql_db: name={{ db_name }}
-    become_user: postgres
-    become: yes
+- name: Create database
+  become: true
+  become_user: postgres
+  postgresql_db: name={{ db_name }}
+                 encoding='UTF-8'
+                 lc_collate='en_US.UTF-8'
+                 lc_ctype='en_US.UTF-8'
+                 template='template0'
+                 state=present
 
-  - name: Create user
-    postgresql_user: db={{ db_name }}
-                     name={{ db_user }}
-                     password={{ db_password }}
-                     priv=ALL
-                     state=present
-                     role_attr_flags=NOSUPERUSER,NOCREATEDB
-    become: yes
-    become_user: postgres 
+- name: Create user
+  become: yes
+  become_user: postgres 
+  postgresql_user: db={{ db_name }}
+                   name={{ db_user }}
+                   password={{ db_password }}
+                   priv=ALL
+                   state=present
+                   role_attr_flags=NOSUPERUSER,NOCREATEDB
+
+- name: Ensure user does not have unnecessary privileges
+  become: true
+  become_user: postgres
+  postgresql_user: name={{ db_user }}
+                   role_attr_flags=NOSUPERUSER,NOCREATEDB
+                   state=present
