--- a/roles/postgresql/tasks/main.yml
+++ b/roles/postgresql/tasks/main.yml
@@ -7,9 +7,9 @@
     pkg:
       - postgresql
       - postgresql-contrib
-      - postgresql-server-dev-all
+      # - postgresql-server-dev-all
       - python3-psycopg2
-      - python-psycopg2
+      # - python-psycopg2
     state: latest
 
 - name: Start and enable postgres
@@ -24,6 +24,12 @@
                  lc_ctype='en_US.UTF-8'
                  template='template0'
                  state=present
+  notify:
+  - postgresql restart
+
+# - name: Add user postgres to root group
+#   shell:
+#     cmd: usermod -a -G root
 
 - name: Create user
   become: yes
@@ -31,13 +37,5 @@
   postgresql_user: db={{ db_name }}
                    name={{ db_user }}
                    password={{ db_password }}
-                   priv=ALL
-                   state=present
-                   role_attr_flags=NOSUPERUSER,NOCREATEDB
-
-- name: Ensure user does not have unnecessary privileges
-  become: true
-  become_user: postgres
-  postgresql_user: name={{ db_user }}
-                   role_attr_flags=NOSUPERUSER,NOCREATEDB
-                   state=present
+                   priv="CONNECT/products:ALL"
+                   encrypted=yes
