--- a/roles/django/tasks/main.yaml
+++ b/roles/django/tasks/main.yaml
@@ -1,6 +1,9 @@
 ---
-- name: Creates directory
-  file: path={{project_name_path}} state=directory
+- name: Create a directory if it does not exist
+  file: 
+    path: "{{ project_name_path }}" 
+    state: directory
+    mode: '0755'
 
 - name: Install Django Framework
   pip:
