--- a/roles/django/tasks/main.yaml
+++ b/roles/django/tasks/main.yaml
@@ -1,29 +1,32 @@
 ---
 - name: Create a directory if it does not exist
   file: 
-    path: "{{ project_name_path }}" 
+    path: '{{ project_name_path }}'
     state: directory
     mode: '0755'
 
 - name: Install Django Framework
   pip:
     name: django
-    virtualenv: "{{project_name_path}}/env"
-    virtualenv_command: virtualenv
-    virtualenv_python: python3
+    # virtualenv: "{{project_name_path}}/env"
+    # virtualenv_command: virtualenv
+    # virtualenv_python: python3
 
 - name: Instal python library for PSQL
   pip:
     name: psycopg2
-    virtualenv: "{{project_name_path}}/env"
-    virtualenv_command: virtualenv
-    virtualenv_python: python3
+    # virtualenv: "{{project_name_path}}/env"
+    # virtualenv_command: virtualenv
+    # virtualenv_python: python3
 
 - name: Install a django project
-  command: "{{ project_name_path }}/env/bin/django-admin.py startproject {{ project_name }} chdir={{ project_name_path }}/"
+  command: "django-admin.py startproject {{ project_name }} {{ project_name_path }}"
+  ignore_errors: yes 
 
 - name: Create Settings File for Django
-  template: src=settings.py.j2 dest={{ project_name_path }}/{{ project_name }}/{{ project_name }}/settings.py
+  template: 
+    src: settings.py.j2 
+    dest: '{{ project_name_path }}/{{ project_name }}/settings.py'
 
 - name: Make migrations
   shell: "{{project_name_path}}/env/bin/python3 {{ project_name_path }}/{{ project_name }}/manage.py makemigrations"
