--- a/roles/web/defaults/main.yaml
+++ b/roles/web/defaults/main.yaml
@@ -1,4 +1,4 @@
 ---
   project_path: /home/demo
-  git_url: git@github.com:RysnikM/project_devops.git
+  git_url: https://github.com/RysnikM/project_devops.git
   web_release: web_release_0.1
