--- a/roles/web/tasks/main.yaml
+++ b/roles/web/tasks/main.yaml
@@ -1,19 +1,35 @@
 ---
+- name: Creates directory
+  file: 
+    path: '{{ project_path }}' 
+    state: directory
+
 - name: Clone git repo
   git:
     repo: '{{ git_url }}'
     dest: '{{ project_path }}'
     version: '{{ web_release }}'
 
-# - name: Make migrations
-#   shell: "{{project_name_path}}/env/bin/python3 {{ project_name_path }}/{{ project_name }}/manage.py makemigrations"
+- name: Make migrations
+  shell: "python3 {{ project_path }}/manage.py makemigrations"
 
-# - name: Migrate database
-#   django_manage: app_path={{ project_name_path }}/{{ project_name }}
-#                         command=migrate
-#                         virtualenv={{project_name_path}}/env
+- name: Migrate database
+  shell: "python3 {{ project_path }}/manage.py migrate"
 
-# - name: Get all static files
-#   django_manage: app_path={{ project_name_path }}/{{ project_name }}
-#                         command=collectstatic
-#                         virtualenv={{project_name_path}}/env 
+- name: Get all static files    
+  shell: "python3 {{ project_path }}/manage.py collectstatic"
+
+- name: Check if django superuser exists
+  django_manage:
+    app_path: '{{ project_path }}'
+    command: shell -c 'import sys; from django.contrib.auth.models import User; sys.exit(0 if User.objects.filter(username="admiin").count() > 0 else 1)'
+  register: checksuperuser
+  check_mode: True
+  ignore_errors: True
+  changed_when: False      
+
+- name: django create superuser
+  django_manage:
+    app_path: '{{ project_path }}'
+    command: "createsuperuser --noinput --username=admin --email=admin@{{ inventory_hostname }}"
+  when: checksuperuser.rc != 0
