--- a/roles/web/tasks/main.yaml
+++ b/roles/web/tasks/main.yaml
@@ -17,7 +17,7 @@
   shell: "python3 {{ project_path }}/manage.py migrate"
 
 - name: Get all static files    
-  shell: "python3 {{ project_path }}/manage.py collectstatic"
+  shell: "python3 {{ project_path }}/manage.py collectstatic -y"
 
 - name: Check if django superuser exists
   django_manage:
