--- a/roles/web/tasks/main.yaml
+++ b/roles/web/tasks/main.yaml
@@ -9,6 +9,7 @@
     repo: '{{ git_url }}'
     dest: '{{ project_path }}'
     version: '{{ web_release }}'
+    force: yes
 
 - name: Make migrations
   shell: "python3 {{ project_path }}/manage.py makemigrations"
