--- a/roles/web/defaults/main.yaml
+++ b/roles/web/defaults/main.yaml
@@ -1,5 +1,5 @@
 ---
   project_path: /home/demo
-  project_name: demo
+  project_name: myproject
   git_url: https://github.com/RysnikM/project_devops.git
   web_release: web_release_0.1
