--- a/server_deploy.yaml
+++ b/server_deploy.yaml
@@ -13,7 +13,7 @@
         msg: "{{ out.stdout }}"
 
   roles:
-    # - general
-    # - postgresql
+    - general
+    - postgresql
     - web
-    # - nginx
+    - nginx
