--- a/roles/web/tasks/main.yaml
+++ b/roles/web/tasks/main.yaml
@@ -41,7 +41,6 @@
   shell: "python3 {{ project_path }}/manage.py createsuperuser --noinput --username=admin --email=rn@mvlab.by"
   ignore_errors: yes
 
-
 - name: Create Gunicorn Socket file
   template: 
     src: gunicorn.socket.j2 
@@ -51,3 +50,7 @@
   template: 
     src: gunicorn.service.j2 
     dest: /etc/systemd/system/gunicorn.service 
+
+- name: Enable autostart gunicorn
+  shell: "systemctl start gunicorn.service && \
+          systemctl enable gunicorn.service"
