--- a/roles/general/defaults/main.yaml
+++ b/roles/general/defaults/main.yaml
@@ -2,6 +2,6 @@ apt_http_packages:
     - python3-pip 
     - python3-dev 
     - libpq-dev
-    - git.
+    - git
     - default-jre
     - default-jdk
